# symbiont

./: .gitignore  DISCUSSION.md  README.md  TODO.md
chrome-extension/: build.mjs  manifest.json  package-lock.json  package.json  tsconfig.json
chrome-extension/src/: extension-api.ts
chrome-extension/src/api/: backend-client.ts  types.ts
chrome-extension/src/background/: offscreen-terminal.ts  service-worker.ts
chrome-extension/src/content/: detector.ts  main.ts  toolbar.ts
chrome-extension/src/mojo/: snippet.ts
chrome-extension/src/offscreen/: terminal.html  terminal.ts
chrome-extension/src/overlay/: bundled-styles.ts  editor.ts  sandbox-window.ts  styles.css  terminal-session.ts
chrome-extension/src/popup/: popup.css  popup.html  popup.ts
chrome-extension/src/storage/: domain-whitelist.ts  window-state.ts
python/: pyproject.toml
python/docker/bash/: Dockerfile
python/docker/mojo/: Dockerfile
python/scripts/: dev.sh  test_api.sh
python/symbiont/: config.py  main.py
python/symbiont/api/: health.py  recipes.py  sandbox.py  session.py  terminal.py
python/symbiont/recipes/: bash.py  models.py  mojo.py  mojo_prepare.py  mojo_snippet.py  registry.py
python/symbiont/sandbox/: docker_runner.py  manager.py  models.py  terminal_runner.py
python/symbiont/storage/: db.py  sessions.py
