[project]
name = "symbiont"
version = "0.1.0"
description = "Local backend for Symbiont documentation sandbox"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "docker>=7.1.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.10.0",
]

[project.scripts]
symbiont = "symbiont.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["symbiont"]
